crates/strider-analyze/tests/snapshots/mips32be__floats__f32_compare.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v13" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v13" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "15" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "15" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "16" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "16" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "16" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ v0", shape=house, fillcolor="#163030"];
  "15" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x17:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x17:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="init\nf12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "36" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nf14", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xff7fffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x17:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "36" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "35" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xff7fffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="init\nfcsr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "49" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x17:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
